fixing button padding on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1931,7 +1931,7 @@ input, select, textarea {
 		input[type="button"],
 		button,
 		.button {
-			padding: 0;
+			/* padding: 0; */
 		}
 
 	}
